# freatepad

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: app.rs  main.rs  settings.rs
src/editor/: history.rs  mod.rs
src/file/: associations.rs  mod.rs  recent.rs
src/preview/: highlight.rs  math.rs  mod.rs  typst_math.rs
src/ui/: menu.rs  mod.rs  status_bar.rs  toolbar.rs
